--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-leap-day
 header_pages:
  - about.md
  - index.md
+title: [The title of your site]
+description: [A short description of your site's purpose]
