--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: minima
 header_pages:
  - about.md
  - index.md
-title: [PhD Writing - Game Making with Families]
-description: [A git approach to writing a phd]
+title: PhD Writing - Game Making with Families
+description: A git approach to writing a phd
