--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,12 @@ title: PhD Writing - Game Making with Families
 description: A git approach to writing a phd
 
 url: https://mickfuzz.github.io
+#url: https://localhost
+
+
 baseurl: /phd4
 show_excerpts: true
+theme: jekyll-theme-minimal
 
 # publishing information
 # pandoc -s -o 3M_framework.odt --lua-filter=../pandoctest/zotero.lua --filter=pandoc-citeproc  2021-03-20-3M-framework.md
