--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ url: https://mickfuzz.github.io
 
 baseurl: /phd4
 show_excerpts: true
-theme: jekyll-theme-minimal
+#theme: jekyll-theme-minimal
 
 # publishing information
 # pandoc -s -o 3M_framework.odt --lua-filter=../pandoctest/zotero.lua --filter=pandoc-citeproc  2021-03-20-3M-framework.md
