--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-theme: minima
+# theme: minima
 # site.url: https://mickfuzz.github.io/phd4/
-# remote_theme: pages-themes/hacker@v0.2.0
-# plugins:
-# - jekyll-remote-theme # add this line to the plugins list if you already have one
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 header_pages:
  - about.md
