--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: minima
 # site.url: https://mickfuzz.github.io/phd4/
-remote_theme: pages-themes/hacker@v0.2.0
+#remote_theme: pages-themes/hacker@v0.2.0
 # plugins:
 # - jekyll-remote-theme # add this line to the plugins list if you already have one
 
